--- a/signup.html
+++ b/signup.html
@@ -141,7 +141,8 @@
                     })
                    
 
-                    alert('Account created successfully! Please proceed to the login page.');
+                    alert('Account created successfully! Redirecting to the main page.');
+            window.location.href = 'index.html'; 
 
                 })
 
