--- a/signup.html
+++ b/signup.html
@@ -142,7 +142,7 @@
                    
 
                     alert('Account created successfully! Redirecting to the main page.');
-            window.location.href = 'index.html'; 
+            window.location.href = '/path-to-index/index.html'; 
 
                 })
 
