--- a/signup.html
+++ b/signup.html
@@ -140,10 +140,11 @@
                         lastname: LnameInp.value,
                     })
                    
+console.log('Before redirection');
+            window.location.href = 'index.html';
+            console.log('After redirection');
 
-                    alert('Account created successfully! Redirecting to the main page.');
-            window.location.href = 'login.html'; 
-
+            alert('Account created successfully! Redirecting to the main page.');
                 })
 
                 .catch((error) => {
