--- a/signup.html
+++ b/signup.html
@@ -144,7 +144,8 @@ console.log('Before redirection');
             window.location.href = 'index.html';
             console.log('After redirection');
 
-            alert('Account created successfully! Redirecting to the main page.');
+            alert('Account created successfully! Redirecting to the login page.');
+                    window.location.href = "login.html"
                 })
 
                 .catch((error) => {
