--- a/book.html
+++ b/book.html
@@ -1,14 +1,69 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>signup</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-</head>
+    <title>VerveIN</title>
+    <link rel="icon" href="favicon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="book.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+    <!-- Font Awesome Icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
 
+  <body>
+    <header>
+      <!-- <nav>
+                <img src="logo.png" alt="">
+                <span class="VERVE">VerveIN</span>
+                <ul class="nav-menu">
+                    <li><a href="#" class="active">About</a></li>
+                    <li><a href="intrest.html" target="_blank">Show Interest</a></li>
+                <button class="btn btn-outline-sucess" type="button" id="signoutbutton"> Sign OUT</button>
+                </ul>
+                <div class="search">
+                    <input type="text" placeholder="search">
+                    <i class="ri-search-line"></i>
+                </div>
+            </nav>
+            <h2 id="msg"></h2>
+            <h2 id="greet"></h2> -->
+
+      <!-- New Test Menu  -->
+      <div class="logo">
+        <img src="logo2.png" alt="" />
+        <p class="VERVE">VerveIN</p>
+      </div>
+      <nav class="menu">
+        <a href="index.html">Home</a>
+        <a href="intrest.html">Show Interest</a>
+        <div class="search">
+          <input type="text" placeholder="Search.." />
+          <i class="ri-search-line"></i>
+        </div>
+      </nav>
+      <div class="signout-mobile">
+        <button id="signoutbutton">Sign Out</button>
+        <div class="mobile-menu-container">
+          <i class="fa-solid fa-bars" id="hamburger"></i>
+          <i class="fa-solid fa-xmark" id="close-menu"></i>
+          <nav class="mobile-menu">
+             <a href="index.html">home</a>
+            <a href="intrest.html">Show Interest</a>
+          </nav>
+        </div>
+      </div>
+    </header>
 
 <form class="row g-3">
   <div class="col-md-6">
@@ -54,6 +109,14 @@
     <button type="submit" class="btn btn-primary">Sign in</button>
   </div>
 </form>
+      
+    <footer>
+      <div class="footer-content">
+        <div class="footer-wrapper">
+          <p>&copy; VerveIN. All rights reserved.</p>
+        </div>
+      </div>
+    </footer>
     <script>
       let UserCreds = JSON.parse(localStorage.getItem("user-creds"));
       let UserInfo = JSON.parse(localStorage.getItem("user-info"));
