--- a/book.html
+++ b/book.html
@@ -1,3 +1,70 @@
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>signup</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+</head>
+<style>
+    /* Add your custom CSS styles here */
+    body {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        /* Ensure the form takes the full height of the viewport */
+        margin: 0;
+        /* Remove default margin to center accurately */
+        background-color:black;
+        /* Light grey background color */
+    }
+
+    #Mainform {
+        margin: auto;
+        background-color:#0d0d0d;
+        /* White background color for the form */
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        /* Add a subtle box shadow for depth */
+    }
+
+    h2 {
+        color: #fec86a;
+        /* Bootstrap primary color for the heading */
+    }
+
+
+    button {
+        margin-top: 10px;
+
+    }
+
+    .btn-primary {
+
+        --bs-btn-color: #fec86a;
+        --bs-btn-bg: black;
+        --bs-btn-border-color: #fec86a;
+        --bs-btn-hover-color: black;
+        --bs-btn-hover-bg: #fec86a;
+        --bs-btn-hover-border-color: #fec86a;
+        --bs-btn-focus-shadow-rgb: 49, 132, 253;
+        --bs-btn-active-color: black;
+        --bs-btn-active-bg: #fec86a;
+        --bs-btn-active-border-color: #fec86a;
+        --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+        --bs-btn-disabled-color: #000;
+        --bs-btn-disabled-bg: #fec86a;
+        --bs-btn-disabled-border-color: #fec86a;
+    }
+    /* Add more styles as needed */
+</style>
+
+
+
 <form class="row g-3">
   <div class="col-md-6">
     <label for="inputEmail4" class="form-label">Email</label>
