--- a/intrest.html
+++ b/intrest.html
@@ -13,8 +13,8 @@
         /* Custom styles for dark theme */
         body {
             font-family: 'Open Sans', sans-serif;
-            background-color: black;
-            color: #080808;
+            background-color: #000000;
+            color: #000000;
         }
 
         h2 {
@@ -72,6 +72,7 @@
 
         .max-w-md {
             animation: fadeInUp 0.8s ease-out;
+             color: #000000 ;
         }
     </style>
 </head>
