--- a/intrest.html
+++ b/intrest.html
@@ -91,7 +91,7 @@
         <div class="max-w-md mx-auto bg-gray-100 p-6 rounded-lg shadow">
             <!-- Standard HTML form without Netlify attributes -->
             <form id="interestForm" name="interestForm" action="https://formspree.io/f/xvoeooyo" method="POST"
-                onsubmit="handleFormSubmission(event)">
+                onsubmit="handleFormSubmission(event)" style= 'background-color: #0d0d0d'>
                 <div class="mb-4">
                     <label for="fullName" class="block text-sm font-semibold text-gray-700">Full Name</label>
                     <input type="text" id="fullName" name="fullName" placeholder="John Doe" required
