--- a/intrest.html
+++ b/intrest.html
@@ -83,7 +83,7 @@
 
 <body class="bg-white text-gray-800" style= 'background-color: #000000'>
     <div class="container mx-auto p-4">
-        <div class="text-center my-10" style='color:#fec86a'>
+        <div class="text-center my-10" style='color:#FFFFFF'>
             <h1 class="text-3xl font-bold mb-2 text-indigo-600" style='color:#fec86a'>Show Your Interest in VerveIN</h1>
             <p class="text-lg">Help us demonstrate the demand for our product to investors.</p>
         </div>
