--- a/intrest.html
+++ b/intrest.html
@@ -93,7 +93,7 @@
             <form id="interestForm" name="interestForm" action="https://formspree.io/f/xvoeooyo" method="POST"
                 onsubmit="handleFormSubmission(event)">
                 <div class="mb-4">
-                    <label for="fullName" class="block text-sm font-semibold text-gray-700">Full Name</label>
+                    <label for="fullName" class="block text-sm font-semibold text-white-700">Full Name</label>
                     <input type="text" id="fullName" name="fullName" placeholder="John Doe" required
                         class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50">
                 </div>
