--- a/intrest.html
+++ b/intrest.html
@@ -99,13 +99,13 @@
                 </div>
 
                 <div class="mb-4">
-                    <label for="email" class="block text-sm font-semibold text-gray-700">Email Address</label>
+                    <label for="email" class="block text-sm font-semibold text-white">Email Address</label>
                     <input type="email" id="email" name="email" placeholder="john@example.com" required
                         class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50">
                 </div>
 
                 <div class="mb-6">
-                    <label for="interestLevel" class="block text-sm font-semibold text-gray-700">Interest Level</label>
+                    <label for="interestLevel" class="block text-sm font-semibold text-white">Interest Level</label>
                     <select id="interestLevel" name="interestLevel" required
                         class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50">
                         <option value="">Select an option</option>
