--- a/intrest.html
+++ b/intrest.html
@@ -117,7 +117,7 @@
 
                 <div class="flex justify-center">
                     <button type="submit" id="submitBTN"
-                        class="px-6 py-2 border border-transparent text-base font-medium rounded-md text-golden bg-black hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                        class="px-6 py-2 border border-transparent text-base font-medium rounded-md text-color:#fec86a; bg-black hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                         Submit Interest
                     </button>
                 </div>
