--- a/intrest.html
+++ b/intrest.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+z<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -117,7 +117,7 @@
 
                 <div class="flex justify-center">
                     <button type="submit" id="submitBTN"
-                        class="px-6 py-2 border border-transparent text-base font-medium rounded-md background-color:white; bg-indigo-600 hover:bg-indigo-700 >
+                        class="px-6 py-2 border border-transparent text-base font-medium rounded-md background-color:white; bg-indigo-600 hover:bg-indigo-700">
                         Submit Interest
                     </button>
                 </div>
