--- a/intrest.html
+++ b/intrest.html
@@ -117,7 +117,7 @@ z<!DOCTYPE html>
 
                 <div class="flex justify-center">
                     <button type="submit" id="submitBTN"
-                        class="px-6 py-2 border border-transparent text-base font-medium rounded-md background-color:white; bg-indigo-600 hover:bg-indigo-700">
+                        class="px-6 py-2 border border-transparent text-base font-medium rounded-md  bg-#000000 hover:bg-#fec86a">
                         Submit Interest
                     </button>
                 </div>
