--- a/intrest.html
+++ b/intrest.html
@@ -117,7 +117,7 @@ z<!DOCTYPE html>
 
                 <div class="flex justify-center">
                     <button type="submit" id="submitBTN"
-                        class="px-6 py-2 border border-#fec86a text-base font-medium rounded-md  bg-#000000 hover:#fec86a">
+                        class="px-6 py-2 border border-#fec86a text-base  font-medium rounded-md text-color:white;  bg-#000000 hover:#fec86a">
                         Submit Interest
                     </button>
                 </div>
