--- a/intrest.html
+++ b/intrest.html
@@ -74,24 +74,6 @@ z<!DOCTYPE html>
             animation: fadeInUp 0.8s ease-out;
              color: #000000 ;
         }
-
-        .submitBTN {
-             --bs-btn-color: #fec86a;
-        --bs-btn-bg: black;
-        --bs-btn-border-color: #fec86a;
-        --bs-btn-hover-color: black;
-        --bs-btn-hover-bg: #fec86a;
-        --bs-btn-hover-border-color: #fec86a;
-        --bs-btn-focus-shadow-rgb: 49, 132, 253;
-        --bs-btn-active-color: black;
-        --bs-btn-active-bg: #fec86a;
-        --bs-btn-active-border-color: #fec86a;
-        --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-        --bs-btn-disabled-color: #000;
-        --bs-btn-disabled-bg: #fec86a;
-        --bs-btn-disabled-border-color: #fec86a;
-        }
-        
     </style>
 </head>
 
@@ -135,7 +117,7 @@ z<!DOCTYPE html>
 
                 <div class="flex justify-center">
                     <button type="submit" id="submitBTN"
-                        class="px-6 py-2 border border-GOLD text-base  font-medium rounded-md text-danger  bg-#000000 hover:#fec86a">
+                        class="px-6 py-2 border border-GOLD text-base  font-medium rounded-md bg-sucesses text-white bg-#000000 hover:#fec86a">
                         Submit Interest
                     </button>
                 </div>
